@@ -42,6 +42,10 @@ pop_window_height = default
 ; NB. Works best using a high resolution.
 use_correct_aspect_ratio = false
 
+; Enable pixel perfect scaling. That is, make all pixels the same size by forcing integer scale factors.
+; Warning: You should not enable this if you also enabled the 4:3 aspect ratio setting above!
+use_integer_scaling = false
+
 ; If using a controller with a rumble motor, provide haptic feedback when the kid is hurt.
 enable_controller_rumble = true
 
