@@ -482,3 +482,4 @@ FIXED: Removed redefinition of SDL_COMPILE_TIME_ASSERT.
 FIXED: Add (back) SDL_Joystick interface because not all joysticks are SDL_Controller compatible. (implemented by @vanfanel)
 DONE: Convert waves to mixer sounds when they are loaded, not when they are first played. (suggested by @vanfanel)
 FIXED: Updated Readme.txt - fix macOS instructions.
+DONE: Added option to force pixel perfect scaling (integer scale factors).
